# lareira-digital-website

./: .dockerignore  .woodpecker.yml  LICENSE  Makefile  README.md  about.html  build_site.py  case-studies.html  company.html  index.html  legal-warning.html  news.html  opensource.html  products.html  projects.html  pyproject.toml  robots.txt  sitemap.xml  software.html
.claude/: settings.local.json
.docker/: Dockerfile  docker-compose.yml
css/: fonts.css  lareira-icons-codes.css  lareira-icons-embedded.css  lareira-icons-ie7-codes.css  lareira-icons-ie7.css  lareira-icons.css  screen.css  site.css  style.css  tailwind.css
docker/: Caddyfile  Dockerfile  compose.yml  docker-compose.yml
font/: lareira-icons.eot
js/: nav.js  site.js
lareira/: manage.py
lareira/lareira/: asgi.py  settings.py  urls.py  wsgi.py
pages/: funding.html  press.html
src/: index.html
src/assets/css/: screen.css
src/jobs/: index.html
src/software/: index.html
templates/: _base copy.html  _base.html  index.html
templates/pages/: about.html  contributions.html  funding.html  kit-digital.html  news.html  press.html  services.html
templates/static/css/: lareira-ie7-codes.css  style.css
templates/static/fonts/fontello-3f17bff4/: LICENSE.txt  demo.html
templates/static/fonts/fontello-3f17bff4/css/: lareira-codes.css  lareira-embedded.css  lareira-ie7.css
templates/static/js/: app.js
templates/static_old/css/: lareira.css
templates/static_old/fonts/fontello-3f17bff4/: config.json
templates/static_old/fonts/fontello-3f17bff4/css/: lareira.css
(+1 files in other folders)
